--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 <html>
-    <head></head>
-    <body></body>
+    <head>
+        <!--Karakter çözümleme biçimi-->
+        <meta charset="UTF-8">
+          <!--Sayfa başlığımız-->
+          <title>Patika.Dev || Faruk Karaman</title>
+    </head>
+    <body>
+<!--Sayfada görünecek kısım-->
+<h1>Faruk Karaman</h1>
+<h4>Hakkımda</h4>
+<p>Merhabalar, ben Faruk Karaman! Ankara'da yaşıyorum. Patika.Dev sitesi Front End eğitimi kapsamında bu sayfayı yapıyorum.</p>
+<h3>Hobilerim</h3>
+<ul>
+    <li>Balık tutmak</li>
+    <li>Doğa gezisi yapmak</li>
+    <li>Müzik dinlemek</li>  
+    <li>Film izlemek</li>  
+</ul>
+<p><b>At benim kırmızı çizgimdir. Kimse at sevgimi sorgulayamaz :)</b></p>
+
+
+    </body>
 </html>
