--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li>Kurtlar Vadisi</li>
     <li>Behzat Ç.</li>
     <li>Leyla İle Mecnun</li>
-    <li>Ayak İşleri</li>
+    <li>Merlin</li>
 </ol>
 <h3>Sevdiğim Filmler</h3>
 <!--Sıralı Listeleme-->
